# knowledge-grab

./: .env  .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: build.yml
scripts/: bump-version.sh  clean.sh  generate-latest-json.mjs
src/: App.vue  main.ts  style.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  downloader.rs  http.rs  lib.rs  login.rs  main.rs  models.rs  system.rs  updater.rs
src-tauri/src/api/: books.rs  courses.rs  mod.rs  tags.rs
src-tauri/src/downloader/: m3u8.rs  mod.rs  task.rs
src/components/: DownloadMiniBar.vue  Sidebar.vue  TextbookItem.vue
src/composables/: useCategories.ts  useCoverImage.ts  useDownloadManager.ts  useTextbookFilters.ts  useUpdater.ts
src/pages/: CourseDownloadPage.vue  DisclaimerPage.vue  DownloadManagerPage.vue  HelpPage.vue  SettingsPage.vue  TextbookDownloadPage.vue  WelcomePage.vue
src/utils/: format.ts  settings.ts
