[package]
name = "app"
version = "1.5.0"
description = "教科书下载器"
authors = ["Alterem"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85.0"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
reqwest = { version = "0.12.28", features = ["json", "stream"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
once_cell = "1.21.4"
url = "2.5.8"
percent-encoding = "2.3.2"
futures-util = "0.3.32"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.33"
env_logger = "0.11.11"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
base64 = "0.22.1"
bytes = "1.12.1"
