[package]
name = "app"
version = "2.1.0"
description = "教科书下载器"
authors = ["Alterem"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85.0"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
# 不用 panic = "abort"：GUI 应用里单个任务 panic（如 Windows 文件对话框底层的
# 偶发 COM 问题）会导致整个应用闪退；unwind 下 async 任务的 panic 只终结该任务
strip = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
reqwest = { version = "0.12.28", features = ["json", "stream"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
once_cell = "1.21.4"
url = "2.5.8"
percent-encoding = "2.3.2"
futures-util = "0.3.32"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.33"
env_logger = "0.11.11"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
base64 = "0.22.1"
bytes = "1.12.1"
# RustCrypto：pin 到成熟的 cipher 0.4 / digest 0.10 代（0.5/0.11 代 API 新、文档少）。
# cbc/ecb 0.1 无 alloc feature，PKCS7 去填充须用就地 decrypt_padded_mut，并开启 block-padding。
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["block-padding"] }
ecb = { version = "0.1.2", features = ["block-padding"] }
md-5 = "0.10.6"
hex = "0.4.3"
